--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.5.0",
-    "redis": "^3.0.2",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "redis": "^3.1.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
